reformatted alignment of page and fixed width and height to fit iphone 12 pro max

--- a/react-front-end/src/App.scss
+++ b/react-front-end/src/App.scss
@@ -3,8 +3,8 @@
 
 .App {
   text-align: center;
-  min-width: 375px;
-  min-height: 749px;
+  min-width: 428px;
+  min-height: 926px;
   width: 100%;
 }
 
