--- a/react-front-end/src/components/_mixins.scss
+++ b/react-front-end/src/components/_mixins.scss
@@ -11,11 +11,12 @@
 @mixin wake {
   animation-name: wake;
   animation-duration: 4s;
+  animation-direction: alternate;
 
   @keyframes wake {
     0% {color: white;}
     20% {background-color:$primary_3;}
-    100% {left: 0px }
+    100% {}
   }
 }
 
